# phoebus

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .project  .readthedocs.yaml  .travis.yml  CodeConventions.md  LICENSE  LICENSE.html  README.md  appveyor.yml  authorizations.conf  build.sh  build.xml  jitpack.yml  nbactions.xml  overview_1.opi  phoebus.sh  pixi.toml  pom.xml  run.sh  run_maven.sh
.github/: CI_VERSIONS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
alarm-server-product/: alarm-server.sh  build.xml  pom.xml
app/: .project  pom.xml
applications/: pom.xml
aspects/: build.xml  pom.xml
core/: .project  README.md  pom.xml
dependencies/: .classpath  .gitignore  .project  README.md  ant_settings.xml  package_target.sh  pom.xml
docs/: Makefile  README.md  make.bat  pixi.toml  pyproject.toml
docs/source/: .gitignore  Diagrams.pptx  applications.rst  architecture.rst  authorization.rst  changelog.rst  conf.py  converter.rst  convertor.rst  develop.rst  docker.rst  docking.rst  eclipse_debugging.rst  gui_testing.rst  help_system.rst  index.rst  intro.rst  localization.rst  locations.rst  logging.rst  persistence.rst  phoebus_product.rst  preference_properties.md  preference_properties.rst  preferences.rst  requirements.txt  running.rst  services.rst  services_architecture.rst  trouble_shooting.rst
docs/source/_ext/: safe_openapi.py
docs/source/_ext/preferences_listing/: __init__.py  _domain.py  _parsing.py
docs/source/_static/: api-font.css
docs/swagger/: convertMarkDown.js  package.json
launcher/: Cargo.toml
misc/: Dockerfile
(+6871 files in other folders)
